Post Pertemuan Ke4 MAJ

--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ url: "https://infoummu.github.io"
 author:
   name: "Informatika UMMU"
   email: "elyas.uii14@gmail.com"
-  url: "https://infoummu.github.io/taj"
+  url: "https://infoummu.github.io/maj"
 
 # Build settings
 # baseurl: /abuisa.github.io
-baseurl: /MAJ
+baseurl: /MAJ/
 # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
